Done with all web browsers
CSS being finished

--- a/tss_swim.html
+++ b/tss_swim.html
@@ -15,6 +15,8 @@
    -->
     <meta charset="utf-8" />
     <title>TSS Swimming Class</title>
+    <link rel="stylesheet" href="tss_layout.css" />
+    <link rel="stylesheet" href="tss_styles.css" />
 
 </head>
 
@@ -26,7 +28,7 @@
     <nav>
         <ul>
             <li>
-                <a href="tss_home.html">Home</a>
+                <a href="index.html">Home</a>
             </li>
             <li>
                 <a href="tss_run.html">Running</a>
