--- a/tss_bike.html
+++ b/tss_bike.html
@@ -15,7 +15,8 @@
    -->
     <meta charset="utf-8" />
     <title>TSS Cycling Class</title>
-
+    <link rel="stylesheet" href="tss_layout.css" />
+    <link rel="stylesheet" href="tss_styles.css" />
 </head>
 
 <body>
@@ -26,7 +27,7 @@
     <nav>
         <ul>
             <li>
-                <a href="tss_home.html">Home</a>
+                <a href="index.html">Home</a>
             </li>
             <li>
                 <a href="tss_run.html">Running</a>
