--- a/tss_bike.html
+++ b/tss_bike.html
@@ -8,7 +8,7 @@
     Tutorial Case
     
     TSS Cycling Class
-    Author: Patrick J Clawson, M.Ed.
+    Author: Caleb Snow
     Date:   8.27.18   
 
     Filename: tss_bike.html
