--- a/tss_run.html
+++ b/tss_run.html
@@ -8,7 +8,7 @@
     Tutorial Case
     
     TSS Running Class
-    Author: Patrick J Clawson, M.Ed.
+    Author: Caleb Snow
     Date:   8.27.18   
 
     Filename: tss_run.html
