--- a/tss_swim.html
+++ b/tss_swim.html
@@ -8,7 +8,7 @@
     Tutorial Case
     
     TSS Swimming Class
-    Author: Patrick J Clawson, M.Ed.
+    Author: Caleb Snow
     Date:   8.27.18   
 
     Filename: tss_swim.html
